[gd_scene load_steps=3 format=3 uid="uid://sb11wcnhnfwt"]

[ext_resource type="Script" uid="uid://drql3gjtoyp2h" path="res://src/ui/inventory_layer.gd" id="1_sjulx"]
[ext_resource type="PackedScene" uid="uid://caoneprh3fic" path="res://prefabs/ui/inventory_carousel.tscn" id="3_wdq5t"]

[node name="InventoryLayer" type="CanvasLayer"]
script = ExtResource("1_sjulx")

[node name="InventoryMenu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="InventoryMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="MarginContainer" type="MarginContainer" parent="InventoryMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="InventoryMenu/MarginContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="InventoryMenu/MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 50.0
offset_bottom = 31.0
text = "Close"

[node name="InventoryCarousel" parent="InventoryMenu" instance=ExtResource("3_wdq5t")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_bottom = 0.5

[connection signal="pressed" from="InventoryMenu/MarginContainer/Control/CloseButton" to="." method="_on_close_button_pressed"]
